[gd_scene load_steps=5 format=3 uid="uid://cvxnss0p22wde"]

[ext_resource type="Script" path="res://scenes/UI/options_screen.gd" id="1_gstv6"]
[ext_resource type="Theme" uid="uid://xdse31n3ef74" path="res://StellaraTheme.tres" id="2_wlk5c"]
[ext_resource type="Texture2D" uid="uid://duko5xybmteb4" path="res://scenes/game_objects/enemies/asteroids/asteroid_sm02.png" id="3_snixn"]
[ext_resource type="Texture2D" uid="uid://d158mw4vfcy58" path="res://scenes/game_objects/enemies/asteroids/asteroid_sm03.png" id="4_8gbk4"]

[node name="Options_screen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_gstv6")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 200

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_wlk5c")
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 100
text = "Options!"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="sfx_label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_wlk5c")
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 25
text = "sound effects volume"

[node name="Sound_effects_volume" type="HSlider" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
focus_neighbor_top = NodePath("../../../../MarginContainer2/BackButton")
theme = ExtResource("2_wlk5c")
theme_override_icons/grabber = ExtResource("3_snixn")
theme_override_icons/grabber_highlight = ExtResource("3_snixn")
max_value = 1.0
step = 0.1
value = 0.5

[node name="music_label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_wlk5c")
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 30
text = "music volume"

[node name="Music_volume" type="HSlider" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
focus_neighbor_bottom = NodePath("../../../../MarginContainer2/BackButton")
theme = ExtResource("2_wlk5c")
theme_override_icons/grabber = ExtResource("4_8gbk4")
theme_override_icons/grabber_highlight = ExtResource("4_8gbk4")
max_value = 1.0
step = 0.1
value = 0.5

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
focus_neighbor_top = NodePath("../../MarginContainer/VBoxContainer/VBoxContainer/Music_volume")
focus_neighbor_bottom = NodePath("../../MarginContainer/VBoxContainer/VBoxContainer/Sound_effects_volume")
theme = ExtResource("2_wlk5c")
theme_override_font_sizes/font_size = 30
text = "BACK"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="Controls" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer3"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("2_wlk5c")
text = "use WASD / left stick to move
Use Mouse / right stick to aim + shoot
"
horizontal_alignment = 1
